fix: 余計なセルを削除

--- a/test.ipynb
+++ b/test.ipynb
@@ -141,11 +141,11 @@
     "        g.edge(type, d)\n",
     "\n",
     "# グラフ描画（ホスト）\n",
-    "host_subgrap_name = '{}_host'.format(subgraph_name)\n",
-    "with g.subgraph(name=host_subgrap_name) as hsg:\n",
+    "host_subgraph_name = '{}_host'.format(subgraph_name)\n",
+    "with g.subgraph(name=host_subgraph_name) as hsg:\n",
     "    hsg.attr(label='host machine')\n",
     "    # ホストのvolumeのnodeを作成\n",
-    "    volume_host_subgraph_name = '{}_volume'.format(host_subgrap_name)\n",
+    "    volume_host_subgraph_name = '{}_volume'.format(host_subgraph_name)\n",
     "    with hsg.subgraph(name=volume_host_subgraph_name) as vhsg:\n",
     "        vhsg.attr(label='volumes')\n",
     "        for p in host_volume_dict.keys():\n",
@@ -153,7 +153,7 @@
     "                vhsg.node(p, shape='folder')\n",
     "                g.edge(p, host_volume_dict[p])\n",
     "    # ホストのportのnodeを作成\n",
-    "    port_host_subgraph_name = '{}_port'.format(host_subgrap_name)\n",
+    "    port_host_subgraph_name = '{}_port'.format(host_subgraph_name)\n",
     "    with hsg.subgraph(name=port_host_subgraph_name) as phsg:\n",
     "        phsg.attr(label='ports')\n",
     "        for p in host_port_dict.keys():\n",
@@ -188,13 +188,6 @@
    "source": [
     "g.view()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
